After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 777873 - F6 doesn't focus address input if the web view is focused.
F6 doesn't focus address input if the web view is focused.
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.23.x
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-28 15:50 UTC by Tomas Popela
Modified: 2017-01-28 17:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: Add F6 to key event blacklist (986 bytes, patch)
2017-01-28 17:23 UTC, Michael Catanzaro
committed Details | Review

Description Tomas Popela 2017-01-28 15:50:03 UTC
It only works if some other Epi part is focused (e.g. search entry).
Comment 1 Michael Catanzaro 2017-01-28 17:23:29 UTC
The following fix has been pushed:
3e2f75d window: Add F6 to key event blacklist
Comment 2 Michael Catanzaro 2017-01-28 17:23:32 UTC
Created attachment 344462 [details] [review]
window: Add F6 to key event blacklist

For whatever reason, the webview always consumes this, breaking our
keyboard shortcut.