window: Add F6 to key event blacklist

For whatever reason, the webview always consumes this, breaking our
keyboard shortcut.

https://bugzilla.gnome.org/show_bug.cgi?id=777873